welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:2: error: identifier expected but integer literal found.
  var T = new Array [14] 
                     ^golomb:3: error: ']' expected but ';' found.
  var k =0
^